# meal-planner

./: .copilot-tasks.md  .dockerignore  .env.example  .gitignore  .markdownlintignore  .pre-commit-config.yaml  .tflint.hcl  .tmp_git_status.sh  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  renovate.json
.github/: actionlint.yaml  copilot-instructions.md  copilot-references.md  firestore.instructions.md  labeler.yml  pull_request_template.md  terraform.instructions.md
.github/instructions/: firestore.instructions.md  python-style-guide.instructions.md  terraform.instructions.md  tsx-style-guide.instructions.md
.github/skills/copilot-self-improvement/: SKILL.md
.github/skills/enhancement-evaluator/: SKILL.md
.github/skills/local-development/: SKILL.md
.github/skills/pr-review-workflow/: SKILL.md
.github/skills/recipe-improvement/: SKILL.md  equipment.md  household-config.md
.github/skills/security/: SKILL.md
.github/skills/working-context/: SKILL.md
.github/workflows/: auto-label-pr.yml  cache-update.yml  cloud-run-deploy.yml  firebase-hosting.yml  renovate.yml  security-checks.yml  terraform-deploy.yml  terraform-tests.yml  tests.yml
.streamlit/: config.toml
api/: .env.example  __init__.py  main.py
api/auth/: __init__.py  firebase.py  helpers.py  models.py
api/models/: __init__.py  admin.py  equipment.py  featured.py  grocery_list.py  meal_plan.py  recipe.py  recipe_note.py  settings.py
api/routers/: __init__.py  admin.py  featured.py  grocery.py  meal_plans.py  recipe_enhancement.py  recipe_images.py  recipe_notes.py  recipe_scraping.py  recipes.py
api/services/: __init__.py  dietary_prompt_builder.py  featured_categories.py  grocery_categories.py  html_fetcher.py  image_downloader.py  image_service.py  ingredient_parser.py  prompt_loader.py  recipe_enhancer.py  recipe_mapper.py  recipe_sanitizer.py  store_order.py  url_safety.py
api/storage/: __init__.py  firestore_client.py  grocery_list_storage.py  household_storage.py  meal_plan_storage.py  recipe_notes_storage.py  recipe_queries.py  recipe_storage.py  store_order_storage.py
app/: icons.py  main.py
app/assets/icons/: README.md
app/models/: __init__.py  grocery_list.py  meal_plan.py  recipe.py
app/services/: ingredient_parser.py  recipe_scraper.py
app/storage/: __init__.py  firestore_client.py  meal_plan_storage.py  recipe_storage.py
config/prompts/core/: base.md  formatting.md  rules.md  tagging.md
config/prompts/locales/: en.md  it.md  sv.md
config/prompts/user/: dietary.md  equipment.md  language.md
data/: .gitkeep
docs/: DEVELOPMENT.md  INFRASTRUCTURE.md
functions/scrape_recipe/: main.py  recipe_scraper.py  requirements.txt
infra/environments/dev/: README.md  backend.tf  backend.tf.example  main.tf  outputs.tf  state.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/modules/apis/: main.tf  outputs.tf
infra/modules/artifact_registry/: main.tf  variables.tf
infra/modules/backup/: README.md  main.tf  outputs.tf
mobile/: .env.example  .firebaserc  .firebaserc.example  .gitignore  app.json  assets.d.ts  biome.json  firebase.json  global.css  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vitest.config.ts
mobile/app/: _layout.tsx  add-recipe.tsx  ai-settings.tsx  household-settings.tsx  no-access.tsx  review-recipe.tsx  select-recipe.tsx  settings.tsx  sign-in.tsx
mobile/components/: ActionButton.tsx  AnimatedPressable.tsx  BodyPortal.tsx  BodyPortal.web.tsx  BottomActionBar.tsx  BottomSheetModal.tsx  BouncingLoader.tsx  Button.tsx  ButtonGroup.tsx  CRTOverlay.tsx  Chip.tsx  ChipGroup.tsx  ChipPicker.tsx  ContentCard.tsx  Divider.tsx  DropdownPicker.tsx  EmptyState.tsx  EnhancementReviewModal.tsx  EnhancingOverlay.tsx  ErrorBoundary.tsx  FilterChip.tsx  FloatingTabBar.tsx  FormField.tsx  FullScreenLoading.tsx  GoogleLogo.tsx  GradientBackground.tsx  GroceryItemRow.tsx  GroceryListView.tsx  HelpTip.tsx  IconButton.tsx  IconCircle.tsx  InlineAddInput.tsx  ItemChipList.tsx  LanguagePromptModal.tsx  MealGrid.tsx  MirroredBackground.tsx  NumericField.tsx  PrimaryButton.tsx  RadioGroup.tsx  RecipeCard.tsx  (+23 more)
mobile/lib/: alert-context.tsx  alert.ts  api.ts  enhanced-mode-context.tsx  firebase.ts  grocery-context.tsx  haptics.ts  language-state.ts  query-provider.tsx  settings-context.tsx  tab-bar-scroll.ts  tab-config.ts  theme.ts  types.ts
mobile/lib/api/: admin.ts  (+3 more)
mobile/public/: manifest.json
mobile/scripts/: setup-env.ps1  setup-env.sh
mobile/test/: helpers.ts  setup.ts
scripts/: backfill_enhancement_review.py  backfill_hidden_field.py  backfill_normalized_url.py  backfill_originals.py  backfill_title_lower.py  backfill_visibility_fields.py  batch_test.py  check_consolidation.py  check_db.py  check_id.py  consolidate_databases.py  consolidate_recipes.py  create_recipe.py  fix_embedded_image.py  manage_households.py  migrate_images.py  migrate_salad_to_side_dish.py  migrate_to_household.py  recipe_enhancer.py  recipe_reviewer.py  run-api.sh  run-dev.sh  run-function.sh  setup-local-dev.ps1  setup-local-dev.sh  test_gemini.py  upload_enhanced_recipe.py  validate_gemini.py
tests/: conftest.py  test_admin_models.py  test_api_admin.py  test_api_grocery.py  test_api_grocery_list.py  test_api_grocery_state.py  test_api_ingredient_parser.py  test_api_main.py  test_api_meal_plan.py  test_api_meal_plans.py  test_api_recipes.py  test_api_store_order.py  test_auth_guard.py  test_auth_helpers.py  test_dietary_prompt_builder.py  test_dietary_sanitization.py  test_equipment.py  test_featured_categories.py  test_grocery_list.py  test_grocery_store_model.py  test_household_storage.py  test_html_fetcher.py  test_image_downloader.py  test_image_service.py  test_ingredient_parser.py  test_instruction_parser.py  test_main.py  test_meal_plan_storage.py  test_prompt_loader.py  test_recipe.py  test_recipe_enhancer.py  test_recipe_mapper.py  test_recipe_notes.py  test_recipe_sanitizer.py  test_recipe_storage.py  test_store_order_service.py  test_url_safety.py
tmp/: pr-body.md
tools/: admin_commands.py  recipe_manager.py
(+284 files in other folders)
